--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,20 @@
     "autoload": {
        "psr-4": {
           "Phooty\\": "src"
-       }
+       },
+       "files": [
+           "src/functions.php"
+       ]
     },
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "pimple/pimple": "^3.3",
+        "php-ds/php-ds": "^1.3",
+        "php-ai/php-ml": "^0.4.1",
+        "evenement/evenement": "^3.0",
+        "react/event-loop": "^1.1.1",
+        "symfony/finder": "^5.2",
+        "symfony/filesystem": "^5.2"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.2",
