--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "evenement/evenement": "^3.0",
         "react/event-loop": "^1.1.1",
         "symfony/finder": "^5.2",
-        "symfony/filesystem": "^5.2"
+        "symfony/filesystem": "^5.2",
+        "doctrine/cache": "^1.10"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.2",
